--- a/index.html
+++ b/index.html
@@ -1,160 +1,128 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>detailyang</title>
-        <style type="text/css">
-            #a:link    { text-decoration: none; color: blue; }
-            #a:visited { text-decoration: none; color: blue; }
-            a:hover   { text-decoration: underline; color: red; }
-            a:active  { text-decoration: underline; background-color: #FFD0D0; }
-            span.top-link {
-                font-size: 70%;
-            }
-            pre {
-                margin-left: 8px;
-                font-family: monospace, courier;
-            }
-            span {
-                font-weight: bold;
-            }
-            h2 {
-                color: #A00000;
-                padding-top: 15px;
-                font-size: 100%;
-                font-weight: bold;
-            }
-            span.footline {
-                font-weight: bold;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="page-top"><a id="top_of_page"></a></div>
-        <pre><span class="headline">detailyang(4)             Yang Bingwu's Manual       detailyang(4)</span></pre>
-        <h2>
-            <a id="NAME", href="#NAME"></a>
-            NAME &nbsp; &nbsp; &nbsp; &nbsp;
-            <a href="#top_of_page"><span class="top-link">top</span></a>
-        </h2>
-        <pre>       detailyang - an endless and fucking the boring life engineer</pre>
-        <h2><a id="DESCRIPTION" href="#DESCRIPTION"></a>DESCRIPTION  &nbsp; &nbsp; &nbsp; &nbsp; <a href="#top_of_page"><span class="top-link">top</span></a></h2>
-        <pre>       This guy enjoys hack engine</pre>
-        <h2><a id="TALKS" href="#TALKS"></a>TALKS  &nbsp; &nbsp; &nbsp; &nbsp; <a href="#top_of_page"><span class="top-link">top</span></a></h2>
-        <pre>        <a href="http://www.slideshare.net/yangbingwu/a-little-waf">A Little WAF</a>
-        <a href="http://www.slideshare.net/yangbingwu/a-little-nginx">A Little Nginx</a>
-        <a href="http://www.slideshare.net/yangbingwu/a-little-systemtap">A Little Systemtap</a></pre>
-        <h2><a id="POSTS" href="#POSTS"></a>POSTS  &nbsp; &nbsp; &nbsp; &nbsp; <a href="#top_of_page"><span class="top-link">top</span></a></h2>
-        <pre>        <a href="https://github.com/detailyang/ybw/blob/master/posts/how-can-i-debug-php-coredump.md">how-can-i-debug-php-coredump</a></pre>
-        <h2><a id="PROJECTS" href="#PROJECTS"></a>PROJECTS  &nbsp; &nbsp; &nbsp; &nbsp; <a href="#top_of_page"><span class="top-link">top</span></a></h2>
-        <pre>       <a href="https://github.com/detailyang/awesome-cheatsheet">awesome-cheatsheet</a>: :beers: awesome cheatsheet
-       <a href="https://github.com/nodejs/nodejs.org-archive">nodejs.org-archive</a>: [DEPRECATED] Website repository for the Node.js project
-       <a href="https://github.com/youzan/tiny-loader.js">tiny-loader.js</a>: A small loader that load CSS/JS in best way for page performance
-       <a href="https://github.com/youzan/YZSpamFilter">YZSpamFilter</a>: 有赞垃圾内容过滤工具
-       <a href="https://github.com/youzan/SigmaTableViewModel">SigmaTableViewModel</a>: A simple view model for building organized and scalable TableViews.
-       <a href="https://github.com/youzan/TitanRecyclerView">TitanRecyclerView</a>: A handy RecyclerView can deal with all headers, footers, and loading shit.
-       <a href="https://github.com/youzan/ngx_http_ipip_module">ngx_http_ipip_module</a>: nginx http module for ipip.net
-       <a href="https://github.com/detailyang/id-generator">id-generator</a>: :beers: distributed id generation system fork by redis 3.0.2  which support snowflake objectid serialid and sequence number
-       <a href="https://github.com/youzan/felint">felint</a>: A smart way to eslint for front end
-       <a href="https://github.com/youzan/systemtap-toolkit">systemtap-toolkit</a>: YouZan systemtap toolkit to online analyze on production
-       <a href="https://github.com/x-v8/ngx_http_qrcode_module">ngx_http_qrcode_module</a>: :beers: ngx_http_qrcode_module is a an addon for Nginx to generate and serve QR code.(nginx qrcode module)
-       <a href="https://github.com/detailyang/ngx_http_barcode">ngx_http_barcode</a>: :beers: ngx_http_barcode_module is a an addon for nginx to generate barcode
-       <a href="https://github.com/detailyang/cas-server">cas-server</a>: :beers:  center authorization server for enterprise
-       <a href="https://github.com/x-v8/ngx_http_cors_filter">ngx_http_cors_filter</a>: :beers: ngx_http_cors_filter_module is a an addon for nginx to dynamic generate cors(Cross-Origin Resource Sharing)
-       <a href="https://github.com/youzan/felint-config">felint-config</a>: None
-       <a href="https://github.com/detailyang/nginx-location-match-visible">nginx-location-match-visible</a>: :beers: help you understand how does nginx location match works:)
-       <a href="https://github.com/detailyang/wireshark-nsq">wireshark-nsq</a>: :beers: nsq protocol dissector for wireshark
-       <a href="https://github.com/x-v8/ngx_http_reqstat_module">ngx_http_reqstat_module</a>: compate tengine ngx_http_reqstat_module to nginx
-       <a href="https://github.com/detailyang/systemtap-toolkit">systemtap-toolkit</a>: my systemtap toolkit to online analyze on production
-       <a href="https://github.com/detailyang/ngx_http_updown">ngx_http_updown</a>: :beers: ngx_http_updown_module is a an addon for nginx to gracefully up or down
-       <a href="https://github.com/x-v8/ngx_http_datetime_variable_module">ngx_http_datetime_variable_module</a>: It does enhance nginx too add variable year,  month, day, hour, minute, second
-       <a href="https://github.com/detailyang/lua-resty-cors">lua-resty-cors</a>: It's the implement of CORS on OpenResty 
-       <a href="https://github.com/detailyang/awesome-wireshark-dissector">awesome-wireshark-dissector</a>: A curated list of awesome wireshark dissector. Inspired by awesome awesomeness
-       <a href="https://github.com/cas-x/cas-server">cas-server</a>: :beers:  center authorization server for enterprise
-       <a href="https://github.com/cas-x/cas-nginx_http_auth_module">cas-nginx_http_auth_module</a>: A component for nginx http basic auth module integrated with CAS
-       <a href="https://github.com/x-v8/ngx_http_updown">ngx_http_updown</a>: :beers: ngx_http_updown_module is a an addon for nginx to gracefully up or down
-       <a href="https://github.com/detailyang/ncp">ncp</a>: nginx configure parser
-       <a href="https://github.com/cas-x/cas-logo">cas-logo</a>: cas logo
-       <a href="https://github.com/1v2/bootstrap">bootstrap</a>: life bootstrap :smile:
-       <a href="https://github.com/detailyang/ngx_http_cors_filter">ngx_http_cors_filter</a>: :beers: ngx_http_cors_filter_module is a an addon for nginx to dynamic generate cors(Cross-Origin Resource Sharing)
-       <a href="https://github.com/detailyang/ngx_http_ipip_module">ngx_http_ipip_module</a>: ngx_http_ipip_module is an addon for nginx to ipip
-       <a href="https://github.com/cas-x/cas-nginx_http_ssl_auth_module">cas-nginx_http_ssl_auth_module</a>: A component for nginx http auth for ssl client module integrated with CAS
-       <a href="https://github.com/detailyang/pix">pix</a>: CSS pixel art generator
-       <a href="https://github.com/detailyang/pre-commit-shell">pre-commit-shell</a>: :beers: pre commit wrapper shellcheck
-       <a href="https://github.com/1v2/logo">logo</a>: 1v2 logo
-       <a href="https://github.com/detailyang/repo">repo</a>: catch you github nonforked repository
-       <a href="https://github.com/cas-x/cas-crl-server">cas-crl-server</a>: cas certificate revocation list server
-       <a href="https://github.com/detailyang/tsar-bkb">tsar-bkb</a>: tsar bkb component for bkb:)
-       <a href="https://github.com/cas-x/cas-ssh-auth-server">cas-ssh-auth-server</a>: A component for support sshd auth integrated with CAS
-       <a href="https://github.com/detailyang/ybw">ybw</a>: public personal tools
-       <a href="https://github.com/detailyang/zoneproxy">zoneproxy</a>: zoneproxy let you easy to access different network zone
-       <a href="https://github.com/cas-x/lua-resty-cas">lua-resty-cas</a>: A component for nginx access phase module integrated with CAS
-       <a href="https://github.com/x-v8/bkb">bkb</a>: [WIP]
-       <a href="https://github.com/x-v8/generator-nginx-http-module">generator-nginx-http-module</a>: yeoman for generator-nginx-http-module
-       <a href="https://github.com/x-v8/nginx-faq">nginx-faq</a>: nginx faq
-       <a href="https://github.com/x-v8/nginx-xmind">nginx-xmind</a>: :rocket: make notes on xmind about nginx :rocket: https://x-v8.github.io/nginx-xmind/
-       <a href="https://github.com/x-v8/ngx-http-stub-status-rt">ngx-http-stub-status-rt</a>: backport tengine http-stub-status response time to nginx which can easily monitor response time
-       <a href="https://github.com/x-v8/ngx-insides">ngx-insides</a>: ngx-insides
-       <a href="https://github.com/x-v8/ngx_http_auth_file_module">ngx_http_auth_file_module</a>: ngx_http_auth_file_module is a an addon to nginx for authenticated by file
-       <a href="https://github.com/x-v8/ngx_http_barcode">ngx_http_barcode</a>: :beers: ngx_http_barcode_module is a an addon for nginx to generate barcode
-       <a href="https://github.com/cas-x/cas-doc">cas-doc</a>: cas api doc
-       <a href="https://github.com/cas-x/cas-exmailqq">cas-exmailqq</a>: A component for support exmailqq integrated with CAS
-       <a href="https://github.com/x-v8/ngx_http_fproxy_module">ngx_http_fproxy_module</a>: :beers: ngx_http_fproxy_module  is a an addon for nginx to forward proxy
-       <a href="https://github.com/detailyang/bifrost">bifrost</a>: copy ngrok with node.js
-       <a href="https://github.com/x-v8/ngx_http_redis_cluster_module">ngx_http_redis_cluster_module</a>: [WIP] ngx_http_redis_cluster_module is a an addon for nginx to proxy redis cluster
-       <a href="https://github.com/detailyang/blog">blog</a>: :(
-       <a href="https://github.com/x-v8/ngx_http_universal_auth_module">ngx_http_universal_auth_module</a>: None
-       <a href="https://github.com/detailyang/cas-doc">cas-doc</a>: move to https://github.com/cas-x
-       <a href="https://github.com/x-v8/ngx_http_upstream_session_sticky_module">ngx_http_upstream_session_sticky_module</a>: [WIP] now it cannot be using nginx:(
-       <a href="https://github.com/detailyang/cas-exmailqq">cas-exmailqq</a>: A component for support exmailqq integrated with CAS
-       <a href="https://github.com/detailyang/cas-exwechat">cas-exwechat</a>: A component for support wechat adressbook integrated with CAS
-       <a href="https://github.com/detailyang/cas-gitlab">cas-gitlab</a>: A component for support gitlab-ce integrated with CAS 
-       <a href="https://github.com/detailyang/cas-ldap">cas-ldap</a>: A component for support ldap protocol integrated with CAS
-       <a href="https://github.com/detailyang/cas-nginx_http_auth_module">cas-nginx_http_auth_module</a>: A component for nginx module integrated with CAS
-       <a href="https://github.com/cas-x/cas-exwechat">cas-exwechat</a>: A component for support wechat adressbook integrated with CAS
-       <a href="https://github.com/detailyang/dayofstap">dayofstap</a>: learn systemtap day by day
-       <a href="https://github.com/detailyang/detailyang.github.io">detailyang.github.io</a>: find $(whoami) https://detailyang.github.io
-       <a href="https://github.com/detailyang/esl">esl</a>: eve shell options parser for eva-shell
-       <a href="https://github.com/detailyang/hikarian">hikarian</a>: hikarian (departed) tcp + tunnel or tcp over icmp
-       <a href="https://github.com/cas-x/cas-gitlab">cas-gitlab</a>: A component for support gitlab-ce integrated with CAS 
-       <a href="https://github.com/detailyang/learn">learn</a>: None
-       <a href="https://github.com/detailyang/logger">logger</a>: logger: golang implements
-       <a href="https://github.com/cas-x/cas-ldap">cas-ldap</a>: A component for support ldap protocol integrated with CAS
-       <a href="https://github.com/detailyang/lua-resty-rfc5424">lua-resty-rfc5424</a>: This is an implementation of the  RFC5424(syslog) in the OpenResty 
-       <a href="https://github.com/detailyang/lua-resty-socks5-server">lua-resty-socks5-server</a>: This is an implementation of the SOCKS v5 server in the OpenResty
-       <a href="https://github.com/detailyang/luaproxy">luaproxy</a>: https or http proxy which use lua script to control http traffic
-       <a href="https://github.com/detailyang/readelf">readelf</a>: One Python File To Parse ELF For Learning ELF
-        </pre>
-        <h2><a id="CONTRIBUTES" href="#CONTRIBUTES"></a>CONTRIBUTES  &nbsp; &nbsp; &nbsp; &nbsp; <a href="#top_of_page"><span class="top-link">top</span></a></h2>
-        <pre>       <a href="https://github.com/openresty/lua-nginx-module">lua-nginx-module</a>: Embed the Power of Lua into NGINX HTTP servers
-       <a href="https://github.com/ant-design/ant-design">ant-design</a>: :ant: One design language
-       <a href="https://github.com/alibaba/tengine">tengine</a>: A distribution of Nginx with some advanced features
-       <a href="https://github.com/haiwen/seafile">seafile</a>: File syncing and sharing software with file encryption and group sharing, emphasis on reliability and high performance. 
-       <a href="https://github.com/foru17/front-end-collect">front-end-collect</a>: 分享自己长期关注的前端开发相关的优秀网站、博客、以及活跃开发者
-       <a href="https://github.com/tj/consolidate.js">consolidate.js</a>: Template engine consolidation library for node.js
-       <a href="https://github.com/fisherman/fisherman">fisherman</a>: A plugin manager for fish http://fisherman.sh
-       <a href="https://github.com/thank-you-github/thank-you-github">thank-you-github</a>: An open letter of gratitude to GitHub
-       <a href="https://github.com/nodejs/nodejs.org">nodejs.org</a>: The Node.js website.
-       <a href="https://github.com/linode/docs">docs</a>: Linode guides and tutorials.
-       <a href="https://github.com/fzzy/radix">radix</a>: Redis client for Go
-       <a href="https://github.com/openresty/test-nginx">test-nginx</a>: Data-driven test scaffold for Nginx C module and OpenResty Lua library development
-       <a href="https://github.com/jeremycx/node-LDAP">node-LDAP</a>: LDAP binding for node.js
-       <a href="https://github.com/soulteary/Get-D2-2014-Ticket">Get-D2-2014-Ticket</a>: Get D2 2014 Ticket - Designer & Developer Frontend Technology Forum
-       <a href="https://github.com/gnuhpc/All-About-Redis">All-About-Redis</a>: None
-       <a href="https://github.com/1v2/bootstrap">bootstrap</a>: life bootstrap :smile:
-       <a href="https://github.com/1v2/logo">logo</a>: 1v2 logo
-       <a href="https://github.com/chenyangdo/webfront">webfront</a>: 前端知识天地
-       <a href="https://github.com/cloudcopy/seafile">seafile</a>: None
-       <a href="https://github.com/eladiomejutogracia/tech-cheatsheet">tech-cheatsheet</a>: None
-       <a href="https://github.com/golang-mirrors/radix">radix</a>: Mirror of github.com/fzzy/radix
-       <a href="https://github.com/jkhowland/static-landing">static-landing</a>: The landing page for Static Buildup
-       <a href="https://github.com/koa-grace/grace-consolidate">grace-consolidate</a>: None
-       <a href="https://github.com/zhangfengbing/front-end">front-end</a>: 转载
-        </pre>
-        <h2><a id="COLOPHON" href="#COLOPHON"></a>COLOPHON  &nbsp; &nbsp; &nbsp; &nbsp; <a href="#top_of_page"><span class="top-link">top</span></a></h2>
-        <pre>       This page is part of release 0.1.0 of the detailyang project.
-        <br/>       <span class="footline">detailyang(4)                            1993-06-01                        detailyang(4)</span>
-        </pre>
-    </body>
-</html>
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+<title>detailyang</title>
+<link href="https://fonts.googleapis.com/css?family=Asar" rel="stylesheet">
 
+<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1" />
+<meta name="author" content="detailynag" />
+<meta name="description" content="detailynag is an engineer" />
+<meta name="keywords" content="detailyang,Linux,Kernel,Github" />
+<meta name="referrer" content="no-referrer-when-downgrade" />
+<style>
+body {
+    background: #fff;
+    color: #424242;
+    font-family: 'Asar', serif;
+    margin: 1.5em 12% 0 12%;
+    position: relative;
+}
+footer, header, main, section {
+    display: block;
+}
+h1 {
+    font-size: 2em;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+h2 {
+    font-size: 1.1em;
+    font-weight: bold;
+    margin: 1.1em 0 0.25em 0;
+    padding: 0;
+}
+p {
+    font-size: 0.9em;
+    margin: 0 0 0.8em 0;
+    padding: 0;
+}
+address {
+    font-style: normal;
+    display: inline;
+}
+cite, em {
+    font-style: italic;
+}
+a:link {
+    color: #3F51D0;
+    text-decoration: none;
+}
+a:visited {
+    color: #9C27EE;
+}
+a:hover {
+    color: #C628A5;
+}
+a:active {
+    color: #FFC155;
+}
+footer {
+    color: #BDBDDD;
+    margin: 1em 0 1em 0;
+    text-align: center;
+}
+small {
+    font-size: 0.8em;
+    letter-spacing: 0.4em;
+}
+::-moz-selection {
+    background: #ffc107;
+    color: #424242;
+}
+::selection {
+    background: #ffc107;
+    color: #424242;
+}
+</style>
+</head>
+
+<body>
+<header>
+    <h1 itemprop="name">detailyang</h1>
+    <meta itemprop="gender" content="male" />
+    <link itemprop="url" href="https://rlove.org/" />
+    <link itemprop="sameAs" href="/" />
+    <link itemprop="image" href="/avatar.jpg" />
+</header>
+
+<section>
+    <header><h2>Links</h2></header>
+    <address>
+    <p>
+        <a itemprop="email" href="http://www.google.com/recaptcha/mailhide/d?k=01dLVrD8iBbnzXA7ITlzx-dA==&c=hR1aspPgC1dbw5_7MwYBn4ihkEfy3ME3Zl2yK7rfz7A=">Email</a>
+         ·
+        <a itemprop="sameAs" href="https://github.com/detailyang" rel="me">Github</a>
+         ·
+        <a itemprop="sameAs" href="https://twitter.com/detailyang" rel="me">Twitter</a>
+    </p>
+    </address>
+</section>
+
+<section>
+<header><h2>About</h2></header>
+<p itemscope itemtype="https://schema.org/Periodical">I am an engineer enjoying and learning from open source software</p>
+<p itemscope itemtype="https://schema.org/Periodical">I am a memmber of <a href="https://github.com/fisherman">fisherman</a>,<a href="https://github.com/openresty">openresty</a> and <a href="https://github.com/nodejs">nodejs</a></p>
+<p itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">I live in <span itemprop="addressLocality">China</span>.<meta itemprop="addressRegion" content="MA" /><meta itemprop="addressCountry" content="US" /></p>
+</section>
+
+<section>
+<header><h2>Talks</h2></header>
+<p itemscope itemtype="https://schema.org/Book"><span itemprop="description"><cite>
+<a itemprop="url" href="https://www.slideshare.net/yangbingwu/presentations"><span itemprop="name">slideshare about SSL，Nginx, WAF and Systemtap</span></a></cite>
+</section>
+
+<section>
+<header><h2>Software</h2></header>
+</section>
+
+<footer>
+    <small>
+        © <span itemprop="copyrightYear">2017</span>
+        <span itemprop="headline name">detailyang</span>
+        </small>
+</footer>
+</body>
+</html>
