typo: memmber => member

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ small {
 <section>
 <header><h2>About</h2></header>
 <p itemscope itemtype="https://schema.org/Periodical">I am an engineer enjoying and learning from open source software</p>
-<p itemscope itemtype="https://schema.org/Periodical">I am a memmber of <a href="https://github.com/fisherman">fisherman</a>,<a href="https://github.com/openresty">openresty</a> and <a href="https://github.com/nodejs">nodejs</a></p>
+<p itemscope itemtype="https://schema.org/Periodical">I am a member of <a href="https://github.com/fisherman">fisherman</a>,<a href="https://github.com/openresty">openresty</a> and <a href="https://github.com/nodejs">nodejs</a></p>
 <p itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">I live in <span itemprop="addressLocality">China</span>.<meta itemprop="addressRegion" content="MA" /><meta itemprop="addressCountry" content="US" /></p>
 </section>
 
