bugfix: typo tweaks

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <span itemprop="description">
                 <cite>
                     <a itemprop="url" href="https://www.slideshare.net/yangbingwu/presentations">
-                        <span itemprop="name">slideshare about SSL，Nginx, WAF and Systemtap</span>
+                        <span itemprop="name">slideshare about SSL, Nginx, WAF and Systemtap</span>
                     </a>
                 </cite>
     </section>
